--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "grunt-express-server": "0.4.17",
         "grunt-reload": "0.2.0",
         "grunt-bower-task": "0.3.4",
-        "connect": "2.14.5"
+        "connect": "2.14.5",
+        "grunt-karma": "0.8.3",
+        "karma-jasmine": "0.1.5",
+        "karma-phantomjs-launcher": "0.1.2"
     }
 }
