--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
         "angular-route": "1.2.*",
         "angular-mocks": "1.2.*",
         "angular-animate": "1.2.*",
+        "angular-ui-router": "0.2.10",
         "angular-sanitize": "1.2.*",
         "angular-i18n": "1.2.*",
         "angular-ui-router": "latest",
