--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "grunt-contrib-watch": "0.6.1",
         "grunt-contrib-less": "0.11.0",
         "grunt-express-server": "0.4.17",
+        "grunt-symlink": "0.4.0",
         "grunt-reload": "0.2.0",
         "grunt-bower-task": "0.3.4",
         "connect": "2.14.5",
