--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
         "connect": "2.14.5",
         "grunt-karma": "0.8.3",
         "karma-jasmine": "0.1.5",
-        "karma-phantomjs-launcher": "0.1.2"
+        "karma-phantomjs-launcher": "0.1.2",
+
+        "express": "4.2.0",
+        "q": "1.0.1",
+        "body-parser": "1.2.0",
+        "cookie-parser": "1.1.0",
+        "mysql": "2.3.0"
     }
 }
