--- a/.jshintrc
+++ b/.jshintrc
@@ -1,8 +1,10 @@
 {
     "bitwise": true,
+    "asi": true,
     "boss": false,
-    "camelcase": false,
+    "camelcase": true,
     "curly": true,
+    "eqeqeq": true,
     "eqnull": true,
     "immed": true,
     "indent": 4,
@@ -10,35 +12,21 @@
     "newcap": true,
     "noempty": true,
     "noarg": true,
+    "quotmark": "single",
     "regexp": true,
     "smarttabs": true,
+    "strict": true,
     "sub": true,
     "trailing": true,
     "undef": true,
-    "unused": false,
+    "unused": true,
 
     "globals": {
         "angular": true,
         "_": true,
-        "$": true
+        "$": false
     },
 
-    "browser": true,
-    "jquery": true,
-
-    "laxcomma": false,
-    "laxbreak": false,
-
-    "node": false,
-
-    "devel": true,
-
-    "quotmark": "single",
-    "strict": false,
-    "globalstrict": true,
-
-    "onevar": true,
-
-    "asi": true,
-    "eqeqeq": false
+    "node": true,
+    "browser": true
 }
