--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "dependencies": {
         "grunt":"0.4.2",
-        "grunt-contrib-jshint": "0.6.3",
+        "grunt-contrib-jshint": "^0.10",
         "grunt-contrib-uglify": "0.2.2",
         "grunt-contrib-watch": "0.6.1",
         "grunt-contrib-less": "0.11.0",
@@ -26,6 +26,7 @@
         "grunt-karma": "0.8.3",
         "karma-jasmine": "0.1.5",
         "karma-phantomjs-launcher": "0.1.2",
+        "grunt-complexity": "^0.1.6",
 
         "express": "4.2.0",
         "q": "1.0.1",
