Change package and angular version

--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
         "grunt-express-server": "0.4.17",
         "grunt-symlink": "0.4.0",
         "grunt-reload": "0.2.0",
-        "grunt-bower-task": "0.3.4",
+        "grunt-bower-task": "0.4.0",
         "connect": "2.14.5",
         "grunt-karma": "0.8.3",
         "karma-jasmine": "0.1.5",
         "karma-coverage": "^0.2.4",
-        "karma-growl": "^1.7.0",
+        "karma-growl": "~0.1.0",
         "karma-phantomjs-launcher": "0.1.2",
         "grunt-complexity": "^0.1.6",
-        "grunt-jade": "^0.28.2",
+        "grunt-jade": "~0.5.1",
 
         "express": "4.2.0",
         "q": "1.0.1",
