--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - "0.12"
+cache:
+  directory:
+    - node_modules
 install:
   - npm install -g grunt-cli bower
   - npm i
