--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "0.12"
 cache:
-  directory:
+  directories:
     - node_modules
 install:
   - npm install -g grunt-cli bower
