--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         }
     },
     "dependencies": {
+        "bower": "1.4.1",
         "grunt":"0.4.2",
         "grunt-contrib-jshint": "^0.10",
         "grunt-contrib-uglify": "0.2.2",
